--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -14,6 +14,12 @@
     <!--  album  -->
     <string name="upload_album">Загрузить альбом</string>
 
+    <!--  mocks  -->
+    <string name="big_text">Слава РА!!!! ЗдРАвия и ПРАцветания Славяне!!! Предлагаемая Вашему вниманию книгу Дух Душа Тело, которая написана на основе ведомостей и Древних Ведических Писаний, сохРАненных Родами хРАнителей и РАхМанов РАхМанской ТРАдиции «Путь СААГАСТА»</string>
+
+    <!--  photo  -->
+    <string name="upload_photo">Загрузить фото</string>
+
     <string name="name">Имя</string>
     <string name="surname">Фамилия</string>
     <string name="enter_name">Введите ваше имя и фамилию, а также придумайте неповторимый логин</string>
