--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,9 @@
     <string name="library">Library</string>
     <string name="search">Search</string>
 
+    <!--  username  -->
+    <string name="username">Username</string>
+    <string name="enter_name">Please, enter your name or band and your cool login</string>
 
     <string name="tracks">Tracks</string>
     <string name="email">Email</string>
@@ -34,7 +37,7 @@
     <string name="email_taken">This Email is already taken!</string>
     <string name="name">Name</string>
     <string name="surname">Surname</string>
-    <string name="enter_name">Please, enter your name and surname, and also make an unique login</string>
+
     <string name="login">Login</string>
     <string name="name_error">Incorrect name format!</string>
     <string name="surname_error">Incorrect surname format!</string>
