--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -11,6 +11,7 @@
     <string name="upload_track">Загрузить трек</string>
     <string name="tracks">Треки</string>
     <string name="select_track">Выберите трек</string>
+    <string name="pick_audio_file">Выбрать аудио-файл</string>
 
     <!--  album  -->
     <string name="upload_album">Загрузить альбом</string>
