--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <!--  track  -->
     <string name="upload_track">Upload track</string>
     <string name="select_track">Select track</string>
+    <string name="pick_audio_file">Pick an audio file</string>
 
     <!--  album  -->
     <string name="upload_album">Upload album</string>
