publishing post feature

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -33,7 +33,8 @@
     <string name="enter_name">Введите ваше имя или название вашей группы и крутой логин</string>
 
     <!--  post  -->
-    <string name="write_post">Write new post</string>
+    <string name="write_post">Новый пост</string>
+    <string name="upload_post">Загрузить пост</string>
 
     <string name="name">Имя</string>
     <string name="surname">Фамилия</string>
