--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -45,6 +45,8 @@
 
     <!--  profile  -->
     <string name="profile_picture">Фото профиля</string>
+    <string name="subscribers">%1$d \n подписчики</string>
+    <string name="subscriptions">%1$d \n подписки</string>
 
     <!--  playlist  -->
     <string name="create_playlist">Новый плейлист</string>
